--- a/.github/workflows/update-homebrew-tap.yml
+++ b/.github/workflows/update-homebrew-tap.yml
@@ -32,6 +32,6 @@ jobs:
           cd homebrew-lz
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add Formula/lz.rb
+          git add Formula/palette.rb
           git commit -m "Update lz formula for ${GITHUB_REF#refs/tags/v}" || echo "No changes to commit"
           git push
