--- a/.github/workflows/update-homebrew-tap.yml
+++ b/.github/workflows/update-homebrew-tap.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Commit and push
         run: |
-          cd homebrew-lz
+          cd homebrew-palette
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add Formula/palette.rb
