--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,10 +39,10 @@ jobs:
         if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
         uses: houseabsolute/actions-rust-cross@v1
         with:
-          cross-version: "v0.2.6"
           command: build
           target: aarch64-unknown-linux-gnu
           args: --release
+          cross-version: latest
 
       - name: Build release binary
         if: matrix.os != 'ubuntu-latest' || matrix.arch != 'arm64'
