--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,13 @@ jobs:
 
       - name: Install dependencies for cross-compilation
         if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
-        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
-
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc-aarch64-linux-gnu \
+            libssl-dev:arm64 \
+            zlib1g-dev:arm64 \
+            pkg-config
       - name: Add Rust target for cross-compilation
         run: |
           if [ "${{ matrix.os }}" == "ubuntu-latest" ] && [ "${{ matrix.arch }}" == "arm64" ]; then echo aarch64-unknown-linux-gnu; \
