--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, macos-latest] # Ubuntu pinned to 22.04 for working multiarch repos
         arch: [x64, arm64]
 
     steps:
@@ -26,7 +26,7 @@ jobs:
 
       # Only runs for Ubuntu ARM64 builds
       - name: Install cross-compilation dependencies (Linux arm64)
-        if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
+        if: matrix.os == 'ubuntu-22.04' && matrix.arch == 'arm64'
         run: |
           sudo dpkg --add-architecture arm64
           sudo apt-get update
@@ -39,7 +39,7 @@ jobs:
       # Add the Rust target for the architecture
       - name: Add Rust target
         run: |
-          if [ "${{ matrix.os }}" == "ubuntu-latest" ] && [ "${{ matrix.arch }}" == "arm64" ]; then
+          if [ "${{ matrix.os }}" == "ubuntu-22.04" ] && [ "${{ matrix.arch }}" == "arm64" ]; then
             rustup target add aarch64-unknown-linux-gnu
           elif [ "${{ matrix.os }}" == "macos-latest" ] && [ "${{ matrix.arch }}" == "arm64" ]; then
             rustup target add aarch64-apple-darwin
@@ -47,7 +47,7 @@ jobs:
 
       # Build for Ubuntu ARM64 with cross toolchain
       - name: Build (Linux arm64)
-        if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
+        if: matrix.os == 'ubuntu-22.04' && matrix.arch == 'arm64'
         uses: houseabsolute/actions-rust-cross@v1
         with:
           command: build
@@ -56,9 +56,9 @@ jobs:
 
       # Build for all other combinations
       - name: Build (native)
-        if: matrix.os != 'ubuntu-latest' || matrix.arch != 'arm64'
+        if: matrix.os != 'ubuntu-22.04' || matrix.arch != 'arm64'
         run: |
-          if [ "${{ matrix.os }}" == "ubuntu-latest" ] && [ "${{ matrix.arch }}" == "x64" ]; then
+          if [ "${{ matrix.os }}" == "ubuntu-22.04" ] && [ "${{ matrix.arch }}" == "x64" ]; then
             TARGET=
             SUFFIX=linux-amd64
           elif [ "${{ matrix.os }}" == "macos-latest" ] && [ "${{ matrix.arch }}" == "arm64" ]; then
