--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ env_logger = "0.11.8"
 git2 = "0.20.2"
 regex = "1.11.1"
 colorize = "0.1.0"
+
+[dev-dependencies]
+tempfile = "3.8.1"
+mockall = "0.12.1"
+serial_test = "3.0.0"
