--- a/.github/workflows/update-homebrew-tap.yml
+++ b/.github/workflows/update-homebrew-tap.yml
@@ -33,5 +33,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add Formula/palette.rb
-          git commit -m "Update lz formula for ${GITHUB_REF#refs/tags/v}" || echo "No changes to commit"
+          git commit -m "Update palette formula for ${GITHUB_REF#refs/tags/v}" || echo "No changes to commit"
           git push
